# lingo

./: .gitignore  README.md  pyproject.toml
lingo/: __init__.py  __main__.py  app.py  scores.py  styles.tcss  words.py
lingo/screens/: game.py  help.py  leaderboard.py  menu.py  name_prompt.py  splash.py
tests/: test_win_flow.py
