[project]
name = "lingo"
version = "0.1.0"
description = "Lingo — a Wordle-style word game in the terminal"
requires-python = ">=3.10"
dependencies = [
    "textual>=0.80",
]

[project.scripts]
lingo = "lingo.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["lingo"]
